--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -179,6 +179,8 @@ for the cross validation method we chose to use 10 fold cross validations. which
 
 # code file reference
 
+[link to code!](https://github.com/achiadg/ex2/tree/master/prediction1)
+
 # print screen of the prediction score
 
 ![Image of github's cat](/prediction1/score.PNG)
