--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -179,7 +179,7 @@ for the cross validation method we chose to use 10 fold cross validations. which
 
 # code file reference
 
-[link to code!](https://github.com/achiadg/ex2/tree/master/prediction1)
+[link to code!](https://github.com/achiadg/ex2/tree/master/prediction1/prediction1.Rmd)
 
 # print screen of the prediction score
 
@@ -349,6 +349,7 @@ because this is basic algorhitm we didnt need to set the method and the metric f
 we didnt need to set some more parameters.
 
 # code file reference
+[link to code!](https://github.com/achiadg/ex2/tree/master/prediction2/prediction2.Rmd)
 
 # print screen of the prediction score
 ![Image of github's cat](/prediction2/score.PNG)
@@ -500,6 +501,8 @@ for the cross validation method we chose to use 10 fold cross validations. which
 
 
 # code file reference
+[link to code!](https://github.com/achiadg/ex2/tree/master/prediction3/prediction3.Rmd)
+
 
 # print screen of the prediction score
 ![Image of github's cat](/prediction3/score.PNG)
