--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -1,5 +1,11 @@
 # Our Best Score is:
 
+location:2373
+
+username: achiadg
+
+view: Achiad Gelerenter
+
 ![Image of github's cat](/Titanic/MyBestScore.PNG)
 
 
