--- a/report.Rmd
+++ b/report.Rmd
@@ -414,7 +414,7 @@ fit.rpart <- train(Survived~., data=df, method="rpart", metric="Kappa", trContro
 fit.rpart
 ```
 
-### show graphical view of our model that show the accuracy according to the complexity parameter.
+### show graphical view of our model that show the kappa according to the complexity parameter.
 ```{r}
 plot(fit.rpart)
 ```
