--- a/report.Rmd
+++ b/report.Rmd
@@ -126,21 +126,21 @@ fit.rpart <- train(Survived~., data=df, method="rpart", metric="Accuracy", trCon
 fit.gbm <- train(Survived~., data=df, method="gbm", metric="Accuracy", trControl=control,tuneGrid =grid3,na.action = na.pass)
 ```
 
-### show graphical view of our model that show the accuracy according to number of iterations.
+### show graphical view of our c5.0 model that show the accuracy according to the winnow parameter of the algorithm.
 ```{r}
 plot(fit.c50)
 ```
 
 ![Image of github's cat](/prediction1/photo3.PNG)
 
-### show graphical view of our model that show the accuracy according to the complexity parameter.
+### show graphical view of our rpart model that show the accuracy according to the complexity parameter.
 ```{r}
 plot(fit.rpart)
 ```
 
 ![Image of github's cat](/prediction3/photo1.PNG)
 
-### show graphical view of our model that show the accuracy according to number of max tree depth.
+### show graphical view of our gbm model that show the accuracy according to the shrink parameter.
 ```{r}
 plot(fit.gbm)
 ```
@@ -414,7 +414,7 @@ fit.rpart <- train(Survived~., data=df, method="rpart", metric="Kappa", trContro
 fit.rpart
 ```
 
-### show graphical view of our model that show the kappa according to the complexity parameter.
+### show graphical view of our rpart model that show the kappa according to the complexity parameter.
 ```{r}
 plot(fit.rpart)
 ```
